part_2/2_0_2/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-app-svc
spec:
  type: ClusterIP
  selector:
    app: project-app # This is the app as declared in the deployment.
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 5000 # This is the target port
    name: tcp-project-app-frontend
  
  - port: 2346
    protocol: TCP
    targetPort: 8000
    name: tcp-project-app-backend
