part_2/2_0_2/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-app-ingress
spec:
  rules:
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-app-svc
            port: 
              number: 2345
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: project-app-svc
            port: 
              number: 2346
